--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
                 </tr>
                 <tr>
                     <td>Bachelor of Technology (Computer Sci. & Engg.)</td>
-                    <td>Bihar Engineering University, Patna (GEC-Vaishali)</td>
+                    <td>Bihar Engineering University, Patna, Bihar (GEC Vaishali)</td>
                     <td>2023 - 2027</td>
                 </tr>
                 <tr>
                     <td>Higher Secondary Education</td>
-                    <td>Bhagalpur National College, Bhagalpur</td>
+                    <td>Bhagalpur National College, Bhagalpur (Bihar)</td>
                     <td>2020 - 2022</td>
                 </tr>
             </table>
