--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <h3>Skills</h3>
             <ul>
                 <li>C, Python, DSA in C++ (Learning)</li>
-                <li>HTML5, CSS3, JavaScript</li>
+                <li>HTML, CSS, JavaScript</li>
                 <li>Version Control (Git, GitHub)</li>
                 <li>UI/UX Design</li>
             </ul>
@@ -230,6 +230,7 @@
             <h3>Hobbies</h3>
             <ul>
                 <li>🏏 Playing & Watching Cricket</li>
+                <li>💻 Coding</li>
                 <li>✈️ Traveling</li>
                 <li>📚 Reading Books</li>
                 <li>🎮 Gaming</li>
